# rust-on-ios

./: .gitignore  Cargo.toml  README.md  test-spec.sample.sh
ios-test-harness/: ios-test-harness.entitlements  test-spec.sample.sh
ios-test-harness.xcodeproj/: project.pbxproj
ios-test-harness/ios-test-harness/: ContentView.swift
ios-test-harness/ios-test-harness.xcodeproj/: project.pbxproj
ios-test-harness/ios-test-harnessTests/: ios_test_harnessTests.swift
ios-test-harness/test-runner/: create-library.sh  test-Bridging-Header.h  test.h
keyring-assets/: Keyring Demo 2.ai
keyring-core/: Cargo.toml
keyring-demo/: Cargo.toml
keyring-demo/keyring-demo/keyring/: PasswordOps.swift  create-library.sh  remove-library.sh
keyring-demo/keyring-demo/keyring-demo/: ContentView.swift  keyring_demoApp.swift
keyring-demo/keyring-demo/keyring-demo.xcodeproj/: project.pbxproj
keyring-demo/keyring-demo/keyring-demoTests/: keyring_demoTests.swift
keyring-tester/keyring/: create-library.sh  keyring-Bridging-Header.h  keyring.h  remove-library.sh
keyring-tester/keyring-tester/: ContentView.swift
keyring-tester/keyring-tester.xcodeproj/: project.pbxproj
macos-test-harness/: macos_test_harness.entitlements  macos_test_harnessApp.swift
rust-test-harness.xcodeproj/: project.pbxproj
test-runner/: ContentView.swift  TestRunner.swift  create-library.sh  remove-library.sh  test.h
