[package]
name = "keyring-demo"
version = "0.1.0"
edition = "2018"
authors = ["Daniel Brotsky <dev@brotsky.com>"]
repository = "https://github.com/brotskydotcom/rust-on-ios"
license = "MIT OR Apache-2.0"

[lib]
name = "keyring"
crate-type = ["staticlib"]

[dependencies]
keyring = { git = "https://github.com/brotskydotcom/keyring-rs.git", branch = "ios" }
core-foundation = "0.9.2"

[dev-dependencies]
rand = "0.8.4"
serial_test = "0.5.1"
