[package]
name = "keyring-demo"
version = "0.2.0"
edition = "2018"
authors = ["Daniel Brotsky <dev@brotsky.com>"]
repository = "https://github.com/brotskydotcom/rust-on-ios"
license = "MIT OR Apache-2.0"

[lib]
name = "keyring"
crate-type = ["staticlib"]

[dependencies]
keyring = "1.1.1"
core-foundation = "0.9.2"
